plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0' 
    id 'org.beryx.jlink' version '2.26.0'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13.2'
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

application {
    mainClass = 'com.app.App'
    mainModule = 'com.app'
}

sourceSets {
    main {
        resources {
            srcDirs = ['src/main/resources']
        }
    }
}

javafx {
    version = "21"
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.web']
}

jlink {
    imageName = 'SE320App'

    launcher {
        name = 'SE320App'
        jvmArgs = ['--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics,javafx.web']
    }

    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

    jpackage {
        installerType = 'msi'
        installerName = 'SE320AppInstaller'
        appVersion = project.version
        vendor = 'mejunga'
        installerOptions = [
            '--win-per-user-install',
            '--win-menu',
            '--win-shortcut',
            '--win-dir-chooser'
        ]
    }
}
